analysis of vigenere

--- a/Kry.cabal
+++ b/Kry.cabal
@@ -27,6 +27,7 @@ executable Kry
         Eukleid
         ClassicCiphers
         ModularAlgebra
+        CryptoAnalysis
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
