polynomial arithmetics over GF(2^8)

--- a/Kry.cabal
+++ b/Kry.cabal
@@ -28,6 +28,7 @@ executable Kry
         ClassicCiphers
         ModularAlgebra
         CryptoAnalysis
+        Polynom
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
